objects/Order_Template_Line__c.object
<CustomObject>
    <description>Inverter lines for the Order Template</description>
    <fields>
        <fullName>Inverter_Configuration__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Inverter Configuration</label>
        <referenceTo>Inverter_Configuration__c</referenceTo>
        <relationshipLabel>Order Template Lines</relationshipLabel>
        <relationshipName>Order_Template_Lines</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Order_Template__c</fullName>
        <label>Order Template</label>
        <referenceTo>Order_Template__c</referenceTo>
        <relationshipLabel>Order Template Lines</relationshipLabel>
        <relationshipName>Order_Template_Lines</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>4</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Order Template Line</label>
    <nameField>
        <displayFormat>OTL-{00000}</displayFormat>
        <label>Order Template Line Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Order Template Lines</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>